# library

./: .env.example  .gitignore  BUGFIX_REPORT_2026-02-27.md  BUGFIX_REPORT_FINAL_2026-02-27.md  Dockerfile  QA_REPORT_CONTENT_2026-02-27.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test_bugs.sh  verify_all_bugs.py  verify_bugs.py
alembic/: env.py
app/: __init__.py  config.py  database.py  logging_config.py  main.py  middleware.py  models.py
docs/: STATUS.md  WORKSPACE.md  bugfix-report-2026-02-26.md  qa-report-crud-2026-02-25.md
reports/: BUGFIX-FINAL-REPORT-2026-02-26.md  BUGFIX-VERIFICATION-2026-02-26-FINAL.md  BUGFIX-VERIFICATION-CRON-2026-02-26.md  BUGFIX_DEBUG_VERIFICATION_2026-03-04.md  BUGFIX_DETAILED_DEBUG_2026-02-28.md  BUGFIX_DETAILED_DEBUG_2026-03-04.md  BUGFIX_DETAILED_DEBUG_2026-03-04_FINAL.md  BUGFIX_DETAILED_DEBUG_2026-03-05.md  BUGFIX_DETAILED_DEBUG_2026-03-08_1220.md  BUGFIX_DETAILED_REVIEW_2026-03-06_1131.md  BUGFIX_FINAL_2026-02-27.md  BUGFIX_FINAL_CHECK_2026-02-28.md  BUGFIX_FINAL_DEPLOY_2026-02-28.md  BUGFIX_FINAL_REPORT_2026-02-27.md  BUGFIX_FINAL_REPORT_2026-02-28.md  BUGFIX_FINAL_VERIFICATION_2026-02-27.md  BUGFIX_MERGE_REPORT_2026-03-04.md  BUGFIX_REPORT_2026-02-27.md  BUGFIX_REPORT_2026-02-27_FINAL.md  BUGFIX_REPORT_2026-02-27_MOLTBOT.md  BUGFIX_STATUS_2026-02-27.md  BUGFIX_SUMMARY_FINAL.md  BUGFIX_VERIFICATION_2026-02-27.md  BUGFIX_VERIFICATION_2026-02-27_1650.md  BUGFIX_VERIFICATION_2026-02-27_FINAL.md  BUGFIX_VERIFICATION_2026-02-28.md  BUGFIX_VERIFICATION_2026-02-28_1430.md  (+223 more)
scripts/: backup.py  (+2 more)
(+22 files in other folders)
